# PSPD-Lab-gRpc-VM

./: .gitignore  CMakeLists.txt  README.md  server.cpp
api/: Dockerfile  dictionary.proto  dictionary_pb2.py  dictionary_pb2_grpc.py  requirements.txt  server.py  service_pb2.py  service_pb2_grpc.py
server/: CMakeLists.txt  Dockerfile  server.cpp  service.proto
